Used the plugin "translate" in views.

--- a/view/common/csv-property-selector.phtml
+++ b/view/common/csv-property-selector.phtml
@@ -1,12 +1,13 @@
 <?php
+$translate = $this->plugin('translate');
 $escape = $this->plugin('escapeHtml');
 ?>
 <div id="property-selector" class="mapping-group">
-    <a href="#" class="expand" aria-label="<?php echo $this->translate('Expand'); ?>">
+    <a href="#" class="expand" aria-label="<?php echo $translate('Expand'); ?>">
         <h4><?php echo $escape($propertySelectorText); ?></h4>
     </a>
     <div class="collapsible">
-        <input type="text" class="selector-filter" placeholder="<?php echo $this->translate('Filter properties'); ?>">
+        <input type="text" class="selector-filter" placeholder="<?php echo $translate('Filter properties'); ?>">
         <ul class="selectable-list">
             <?php foreach ($vocabularies as $vocabulary): ?>
             <?php
@@ -18,18 +19,18 @@ $escape = $this->plugin('escapeHtml');
             ?>
             <li class='selector-parent'
                 data-vocabulary-id="<?php echo $escape($vocabulary->id()); ?>">
-                <span><?php echo $escape($this->translate($vocabulary->label())); ?></span> (<span class="selector-child-count"><?php echo count($vocabulary->properties()); ?></span>)
+                <span><?php echo $escape($translate($vocabulary->label())); ?></span> (<span class="selector-child-count"><?php echo count($vocabulary->properties()); ?></span>)
                 <ul>
                     <?php foreach ($properties as $property): ?>
                     <li class='selector-child'
-                        data-child-search="<?php echo $escape($this->translate($property->label())); ?>"
+                        data-child-search="<?php echo $escape($translate($property->label())); ?>"
                         data-property-id="<?php echo $escape($property->id()); ?>"
                         data-property-term="<?php echo $escape($property->term()); ?>">
                         <div class="description">
-                            <p class="o-icon-info"><span class="screen-reader-text"><?php echo $this->translate('More info'); ?></span></p>
-                            <p class="field-comment"><?php echo $escape($this->translate($property->comment())); ?></p>
+                            <p class="o-icon-info"><span class="screen-reader-text"><?php echo $translate('More info'); ?></span></p>
+                            <p class="field-comment"><?php echo $escape($translate($property->comment())); ?></p>
                         </div>
-                        <span class="selectable"><?php echo $escape($this->translate($property->label())); ?></span>
+                        <span class="selectable"><?php echo $escape($translate($property->label())); ?></span>
                     </li>
                     <?php endforeach; ?>
                 </ul>
