--- a/view/common/user-sidebar.phtml
+++ b/view/common/user-sidebar.phtml
@@ -1,13 +1,16 @@
+<?php
+$translate = $this->plugin('translate');
+?>
 <div id="user-data" class="mapping-group">
     <a href="#" class="expand" aria-label="Expand">
-        <h4><?php echo $this->translate('Users info'); ?></h4>
+        <h4><?php echo $translate('Users info'); ?></h4>
     </a>
     <div class="collapsible">
         <select data-flag-class="user-data" data-flag-label="">
-            <option value="default"><?php echo $this->translate('Select below'); ?></option>
-            <option value="1" data-flag-name="column-user_email"><?php echo $this->translate('Email'); ?></option>
-            <option value="1" data-flag-name="column-user_name"><?php echo $this->translate('Display name'); ?></option>
-            <option value="1" data-flag-name="column-user_role"><?php echo $this->translate('Role'); ?></option>
+            <option value="default"><?php echo $translate('Select below'); ?></option>
+            <option value="1" data-flag-name="column-user_email"><?php echo $translate('Email'); ?></option>
+            <option value="1" data-flag-name="column-user_name"><?php echo $translate('Display name'); ?></option>
+            <option value="1" data-flag-name="column-user_role"><?php echo $translate('Role'); ?></option>
         </select>
     </div>
 </div>
