--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -1,15 +1,16 @@
 <?php
 $form->prepare();
+$translate = $this->plugin('translate');
 $escapeHtml = $this->plugin('escapeHtml');
 $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
 $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
 ?>
 
-<?php echo $this->pageTitle($this->translate('Import Settings'), 1, $this->translate('CSV Import')); ?>
+<?php echo $this->pageTitle($translate('Import Settings'), 1, $translate('CSV Import')); ?>
 
 <?php echo $this->form()->openTag($form); ?>
 <fieldset id='page-actions'>
-    <button type="submit"><?php echo $this->translate('Next'); ?></button>
+    <button type="submit"><?php echo $translate('Next'); ?></button>
 </fieldset>
 <?php echo $this->formCollection($form, false); ?>
 
