--- a/view/common/options-sidebar.phtml
+++ b/view/common/options-sidebar.phtml
@@ -1,31 +1,34 @@
+<?php
+$translate = $this->plugin('translate');
+?>
 <div id="column-options" class="sidebar">
     <div class="confirm-main">
-        <a href="#" class="sidebar-close o-icon-close"><span class="screen-reader-text"><?php echo $this->translate('Close'); ?></span></a>
-        <h3><?php echo $this->translate('Column options:'); ?></h3>
+        <a href="#" class="sidebar-close o-icon-close"><span class="screen-reader-text"><?php echo $translate('Close'); ?></span></a>
+        <h3><?php echo $translate('Column options:'); ?></h3>
 
         <?php if (empty($resourceType) || in_array($resourceType, ['items', 'resources'])): ?>
         <div class="multivalue option">
-            <label for="multivalue"><?php echo $this->translate('Use multivalue separator'); ?></label>
+            <label for="multivalue"><?php echo $translate('Use multivalue separator'); ?></label>
             <input type="checkbox" data-column-option="column-multivalue" name="multivalue" id="multivalue">
         </div>
         <?php endif; ?>
 
         <div class="language option">
-            <label for="value-language"><?php echo $this->translate('Language'); ?></label>
-            <span class="description"><?php echo $this->translate('This will override language settings in basic import settings.'); ?></span>
+            <label for="value-language"><?php echo $translate('Language'); ?></label>
+            <span class="description"><?php echo $translate('This will override language settings in basic import settings.'); ?></span>
             <input id="value-language" class="value-language active" type="text">
         </div>
 
         <div class="import option">
-            <label for="column-import"><?php echo $this->translate('Import options'); ?></label>
+            <label for="column-import"><?php echo $translate('Import options'); ?></label>
             <select name="column-import" id="column-import" data-column-option="column-import">
-                <option class="button column-text" value="default"><?php echo $this->translate('Import as text (default)'); ?></option>
-                <option class="button column-url" value="column-url"><?php echo $this->translate('Import as URL reference'); ?></option>
-                <option class="button column-reference" value="column-reference"><?php echo $this->translate('Import as Omeka S resource ID'); ?></option>
+                <option class="button column-text" value="default"><?php echo $translate('Import as text (default)'); ?></option>
+                <option class="button column-url" value="column-url"><?php echo $translate('Import as URL reference'); ?></option>
+                <option class="button column-reference" value="column-reference"><?php echo $translate('Import as Omeka S resource ID'); ?></option>
             </select>
         </div>
     </div>
     <div class="confirm-panel">
-        <button type="button"><?php echo $this->translate("Apply changes"); ?></button>
+        <button type="button"><?php echo $translate("Apply changes"); ?></button>
     </div>
 </div>
